k8s/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rwdr-2023
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: rwdr-2023
  name: deployment-2048
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2023
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2023
    spec:
      containers:
      - image: hashicorp/http-echo:latest
        imagePullPolicy: Always
        name: app-2023
        args:
          - "-text=Hello RWDR"
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  namespace: rwdr-2023
  name: service-2048
spec:
  ports:
    - port: 80
      targetPort: 5678
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-2023
